--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <div class="home-container"> <!-- 💡 You can style this container in style.css -->
 
     <!-- 🖊 Big welcome message -->
-    <h1>Welcome to Cakes2u4u! 🎂</h1>
+    <h1>Welcome to Cakes2u4u! </h1>
     <!-- You can change "Cakes2u4u" to your bakery name -->
 
     <!-- 📜 Description / instructions -->
     <p>
       We put the EAT in sweet trEAT! <br> <!-- edited -->
-      With 3 cake flavors to choose from, we'll make sure your taste buds melt into our fluffy bread, delicious frosting, and toothsome toppings 🧁
+      With 3 cake flavors to choose from, we'll make sure your taste buds melt into our fluffy bread, delicious frosting, and toothsome toppings
     </p>
     <!-- 🖊 Customize this paragraph with your own message or business personality -->
 
     <!-- 🧁 More helpful info or fun personality -->
     <p>
-      Click the button below to begin your tasty order 🍰
+      Click the button below to begin your tasty order.
     </p>
     <!-- 🖊 Change this message too — fun, elegant, or whatever matches your brand -->
 
