--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Cakes2u4u - Home</title> <!-- 🖊 Change the tab title here -->
-  <link rel="stylesheet" href="../style.css"> <!-- 🎨 Link to your custom CSS -->
+  <link rel="stylesheet" href=" style.css"> <!-- 🎨 Link to your custom CSS -->
 </head>
 <body>
   <div class="home-container"> <!-- 💡 You can style this container in style.css -->
