--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Checkout - Cakes2u4u</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="checkout-container">
