--- a/invoice.html
+++ b/invoice.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Invoice - Cakes2u4u</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="invoice-container">
