--- a/order.html
+++ b/order.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Order Cakes - Cakes2u4u</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="order-container">
