Reworded 404 page not found text

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <body>
   <div class="home-container">
     <h1>Oops! Page not found.</h1>
-    <p>Looks like this page doesn’t exist.</p>
+    <p>Looks like this page does not exist.</p>
     <a href="/index.html"><button>Go Home</button></a>
   </div>
 </body>
