Fix Cake Button to go to register page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- 🖊 Change this message too — fun, elegant, or whatever matches your brand -->
 
     <!-- ✅ The "Get Started" button (leads to your order page) -->
-    <a href="order.html"><button>Cake Button!</button></a>  <!-- edited -->
+    <a href="register.html"><button>Cake Button!</button></a>  <!-- edited -->
     <!-- 🖊 You can change the button text or styling in style.css -->
 
   </div>
