--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <title>Register - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
   <!-- Load Cognito SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/amazon-cognito-identity-js@6.0.3/dist/amazon-cognito-identity.min.js"></script>
+  <script src="https://unpkg.com/amazon-cognito-identity-js@4.5.10/dist/amazon-cognito-identity.min.js"></script>
   <!-- Load your config with pool info -->
   <script src="amplify-config.js"></script>
 </head>
