Fix register html and js

--- a/register.html
+++ b/register.html
@@ -3,11 +3,12 @@
 <head>
   <title>Register - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Load Cognito SDK -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/aws-cognito-sdk.min.js"></script>
+
+  <!-- Load dependencies -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/amazon-cognito-identity.min.js"></script>
-  
-  <!-- Load your config with pool info -->
+
+  <!-- Config with pool info -->
   <script src="amplify-config.js"></script>
 </head>
 <body>
@@ -20,7 +21,7 @@
     </form>
   </div>
 
-  <!-- Load custom registration logic -->
+  <!-- Custom JS script -->
   <script src="scripts/register.js"></script>
 </body>
 </html>
