Fix: script order in register.html

--- a/register.html
+++ b/register.html
@@ -5,9 +5,10 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Load dependencies -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/aws-cognito-sdk.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/amazon-cognito-identity.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  
   <!-- Config with pool info -->
   <script src="amplify-config.js"></script>
 </head>
