--- a/register.html
+++ b/register.html
@@ -4,10 +4,12 @@
   <title>Register - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Load dependencies -->
+  <!-- Load jQuery first -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+  <!-- ✅ Load Cognito SDK core and wrapper (order matters!) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/aws-cognito-sdk.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/amazon-cognito-identity.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   
   <!-- Config with pool info -->
   <script src="amplify-config.js"></script>
