--- a/register.html
+++ b/register.html
@@ -4,12 +4,16 @@
   <title>Register - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Load jQuery first -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<!-- Load jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-  <!-- ✅ Load Cognito SDK core and wrapper (order matters!) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/aws-cognito-sdk.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/6.0.3/amazon-cognito-identity.min.js"></script>
+<!-- ✅ Load local SDK files -->
+<script src="lib/aws-cognito-sdk.min.js"></script>
+<script src="lib/amazon-cognito-identity.min.js"></script>
+
+<!-- Your pool config -->
+<script src="amplify-config.js"></script>
+
 
   <!-- Config with pool info -->
   <script src="amplify-config.js"></script>
@@ -25,7 +29,7 @@
   </div>
 
    <!-- Test if Cognito is loaded -->
-   <script>
+  <script>
     console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
   </script>
 
