Fixed the amazon-cognito name again waaaah

--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 <!-- ✅ Load local SDK files -->
-<script src="lib/aws-cognito.min.js"></script>
+<script src="lib/amazon-cognito.min.js"></script>
 <script src="lib/amazon-cognito-identity.min.js"></script>
 
 <!-- Your pool config -->
