--- a/register.html
+++ b/register.html
@@ -7,6 +7,10 @@
 <!-- Load jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
+<!-- AWS SDK core (REQUIRED before Cognito) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
+
+
 <!-- ✅ Load local SDK files -->
 <script src="lib/amazon-cognito.min.js"></script>
 <script src="lib/amazon-cognito-identity.min.js"></script>
@@ -14,9 +18,6 @@
 <!-- Your pool config -->
 <script src="amplify-config.js"></script>
 
-
-  <!-- Config with pool info -->
-  <script src="amplify-config.js"></script>
 </head>
 <body>
   <div class="form-container">
