Again with cognito... I spelled both files wrong

--- a/verify.html
+++ b/verify.html
@@ -9,7 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 <!-- ✅ Load AWS SDK + Cognito SDKs -->
-<script src="lib/aws-cognito-sdk.min.js"></script>
+<script src="lib/amazon-cognito.min.js"></script>
 <script src="lib/amazon-cognito-identity.min.js"></script>
 
 <!-- ✅ Your config -->
