debuggin verify.html

--- a/verify.html
+++ b/verify.html
@@ -26,6 +26,10 @@
     </form>
   </div>
 
+  <script>
+    console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
+  </script>
+
 <script src="scripts/verify.js"></script>
 </body>
 </html>
