--- a/verify.html
+++ b/verify.html
@@ -5,15 +5,20 @@
   <title>Verify Your Email - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
 
-<!-- ✅ Load jQuery first -->
+<!-- Load jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-<!-- ✅ Load AWS SDK + Cognito SDKs -->
+<!-- AWS SDK core (REQUIRED before Cognito) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
+
+
+<!-- ✅ Load local SDK files -->
 <script src="lib/amazon-cognito.min.js"></script>
 <script src="lib/amazon-cognito-identity.min.js"></script>
 
-<!-- ✅ Your config -->
+<!-- Your pool config -->
 <script src="amplify-config.js"></script>
+
 </head>
 <body>
   <div class="form-container">
