Debug cognito for verify.html

--- a/verify.html
+++ b/verify.html
@@ -32,7 +32,7 @@
   </div>
 
   <script>
-    console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
+    console.log("Cognito config?", window._config);
   </script>
 
 <script src="scripts/verify.js"></script>
