--- a/verify.html
+++ b/verify.html
@@ -5,19 +5,19 @@
   <title>Verify Your Email - Cakes2u4u</title>
   <link rel="stylesheet" href="style.css">
 
-<!-- Load jQuery -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <!-- Load jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-<!-- AWS SDK core (REQUIRED before Cognito) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
+  <!-- AWS SDK core -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
 
+  <!-- ✅ Load local Cognito SDKs (order matters) -->
+  <script src="lib/amazon-cognito.min.js"></script>
+  <script src="lib/amazon-cognito-identity.min.js"></script>
 
-<!-- ✅ Load local SDK files -->
-<script src="lib/amazon-cognito.min.js"></script>
-<script src="lib/amazon-cognito-identity.min.js"></script>
+  <!-- Your pool config -->
+  <script src="amplify-config.js"></script>
 
-<!-- Your pool config -->
-<script src="amplify-config.js"></script>
 
 </head>
 <body>
@@ -32,6 +32,7 @@
   </div>
 
   <script>
+    console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
     console.log("Cognito config?", window._config);
   </script>
 
