--- a/login.html
+++ b/login.html
@@ -3,8 +3,20 @@
 <head>
   <title>Cakes2u4u - Login</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/amazon-cognito-identity-js@6.0.3/dist/amazon-cognito-identity.min.js"></script>
+
+  <!-- Load jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+  <!-- AWS SDK core -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
+
+  <!-- ✅ Load local Cognito SDKs (order matters) -->
+  <script src="lib/amazon-cognito.min.js"></script>
+  <script src="lib/amazon-cognito-identity.min.js"></script>
+
+  <!-- Your pool config -->
   <script src="amplify-config.js"></script>
+
 </head>
 <body>
   <div class="form-container">
