--- a/invoice.html
+++ b/invoice.html
@@ -21,34 +21,28 @@
   </div>
 
   <script>
-    // 🧾 If you want to carry over submitted order info:
-    // You could pass it via query string, sessionStorage, or fetch from backend
-
-    // For this basic version, simulate with hardcoded example
-    const sampleInvoice = {
-      customerName: "Sample Customer",
-      deliveryAddress: "123 Cake Street",
-      cakes: {
-        "Strawberry Delight": 2,
-        "Chocolate Dream": 1
-      },
-      total: 60
-    };
-
-    // 🧾 Render invoice summary
-    const invoiceDiv = document.getElementById("invoiceSummary");
-
-    let html = `<h2>Invoice Summary</h2>`;
-    html += `<p><strong>Name:</strong> ${sampleInvoice.customerName}</p>`;
-    html += `<p><strong>Delivery Address:</strong> ${sampleInvoice.deliveryAddress}</p>`;
-    html += `<ul>`;
-    for (const cake in sampleInvoice.cakes) {
-      html += `<li>${cake} x ${sampleInvoice.cakes[cake]}</li>`;
+    // ✅ Get the actual order info stored in localStorage from checkout.html
+    const lastOrder = JSON.parse(localStorage.getItem("lastOrder"));
+  
+    // 🚨 If no order is found (user skipped steps), show a message
+    if (!lastOrder) {
+      document.getElementById("invoiceSummary").innerHTML = "<p>No order data found.</p>";
+    } else {
+      // 🧾 Render invoice summary using real order data
+      const invoiceDiv = document.getElementById("invoiceSummary");
+  
+      let html = `<h2>Invoice Summary</h2>`;
+      html += `<p><strong>Name:</strong> ${lastOrder.customerName}</p>`;
+      html += `<p><strong>Delivery Address:</strong> ${lastOrder.deliveryAddress}</p>`;
+      html += `<ul>`;
+      for (const cake in lastOrder.cakes) {
+        html += `<li>${cake} x ${lastOrder.cakes[cake]}</li>`;
+      }
+      html += `</ul>`;
+      html += `<p><strong>Total:</strong> $${lastOrder.total}</p>`;
+  
+      invoiceDiv.innerHTML = html;
     }
-    html += `</ul>`;
-    html += `<p><strong>Total:</strong> $${sampleInvoice.total}</p>`;
-
-    invoiceDiv.innerHTML = html;
   </script>
 </body>
 </html>
