--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cakes2u4u - Home</title> <!-- 🖊 Change the tab title here -->
-  <link rel="stylesheet" href="style.css"> <!-- 🎨 Link to your custom CSS -->
+  <title>Cakes2u4u - Home</title> <!-- Title of home page -->
+  <link rel="stylesheet" href="style.css"> <!-- refers to style in style.css -->
 </head>
 <body>
-  <div class="home-container"> <!-- 💡 You can style this container in style.css -->
+  <div class="home-container"> <!-- Container (div and class name for style.css)-->
 
-    <!-- 🖊 Big welcome message -->
+    <!-- My welcome message -->
     <h1>Welcome to Cakes2u4u! </h1>
-    <!-- You can change "Cakes2u4u" to your bakery name -->
 
-    <!-- 📜 Description / instructions -->
+    <!-- Web Description -->
     <p>
-      We put the EAT in sweet trEAT! <br> <!-- edited -->
+      We put the EAT in sweet trEAT! <br> 
       With 3 cake flavors to choose from, we'll make sure your taste buds melt into our fluffy bread, delicious frosting, and toothsome toppings
     </p>
-    <!-- 🖊 Customize this paragraph with your own message or business personality -->
 
-    <!-- 🧁 More helpful info or fun personality -->
+    <!-- Above button -->
     <p>
       Click the button below to begin your tasty order.
     </p>
-    <!-- 🖊 Change this message too — fun, elegant, or whatever matches your brand -->
 
-    <!-- ✅ The "Get Started" button (leads to your order page) -->
-    <a href="/register.html"><button>Cake Button!</button></a>  <!-- edited -->
-    <!-- 🖊 You can change the button text or styling in style.css -->
+    <!-- Sends to register.html -->
+    <a href="/register.html"><button>Cake Button!</button></a> 
 
   </div>
 </body>
