--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
 
 
-<!-- ✅ Load local SDK files -->
+<!-- Load lib folder files -->
 <script src="lib/amazon-cognito.min.js"></script>
 <script src="lib/amazon-cognito-identity.min.js"></script>
 
@@ -29,12 +29,12 @@
     </form>
   </div>
 
-   <!-- Test if Cognito is loaded -->
-  <script>
+   <!-- Troubleshoot- Tests is Cognito is loaded (worked, commented now) -->
+  <!-- <script>
     console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
-  </script>
+  </script> -->
 
-  <!-- Custom JS script -->
+  <!-- Calls register.js in scripts folder -->
   <script src="scripts/register.js"></script>
 </body>
 </html>
