--- a/verify.html
+++ b/verify.html
@@ -8,14 +8,14 @@
   <!-- Load jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-  <!-- AWS SDK core -->
+  <!-- AWS SDK core (REQUIRED before Cognito) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1480.0/aws-sdk.min.js"></script>
 
-  <!-- ✅ Load local Cognito SDKs (order matters) -->
+  <!-- Load lib folder files in order -->
   <script src="lib/amazon-cognito.min.js"></script>
   <script src="lib/amazon-cognito-identity.min.js"></script>
 
-  <!-- Your pool config -->
+  <!-- User pool config -->
   <script src="amplify-config.js"></script>
 
 
@@ -24,18 +24,20 @@
   <div class="form-container">
     <h2>Verify Your Email</h2>
     <p>Please check your inbox for a verification code.</p>
-    <form id="verifyForm">
-      <input type="email" id="emailInputVerify" placeholder="Email" required><br>
+
+    <!-- Input email and verification code boxes -->
+    <form id="verifyForm"> 
+      <input type="email" id="emailInputVerify" placeholder="Email" required><br> <!-- IDs for verify.js -->
       <input type="text" id="codeInputVerify" placeholder="Verification Code" required><br>
       <button type="submit">Verify</button>
     </form>
   </div>
-
-  <script>
+<!-- Troubleshooting for Cognito connection... again (commented out, worked) -->
+  <!-- <script>
     console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
     console.log("Cognito config?", window._config);
-  </script>
+  </script> -->
 
-<script src="scripts/verify.js"></script>
+<script src="scripts/verify.js"></script> <!-- Call verify.js from scripts folder -->
 </body>
 </html>
