--- a/register.html
+++ b/register.html
@@ -24,6 +24,12 @@
     <form id="registerForm"> <!-- Starts account form for user to type info -->
       <input type="email" id="email" placeholder="Email" required><br> <!-- User types info -->
       <input type="password" id="password" placeholder="Password" required><br>
+      <p>Password should be at least 8 characters long and contain:<br>
+        - An uppercase letter (A-Z) <br>
+        - A lowercase letter (a-z) <br>
+        - A number (0-9) <br>
+        - A special character (!@#$, etc.) <br>
+       </p> 
       <button type="submit">Register</button> <!-- Takes to verify.html page -->
     </form>
   </div>
