Fixed a dumb coma

--- a/invoice.html
+++ b/invoice.html
@@ -9,7 +9,7 @@
     <h1>Thank you for your order!</h1>
 
     <!-- Order confirmation -->
-    <p>We’ve received your order and will start baking right away!</p>
+    <p>We've received your order and will start baking right away!</p>
 
     <!-- Order summary box -->
     <div id="invoiceSummary"></div>
