Add login from register.html page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Web Description -->
     <p>
       We put the EAT in sweet trEAT! <br> 
-      With 3 cake flavors to choose from, we'll make sure your taste buds melt into our fluffy bread, delicious frosting, and toothsome toppings
+      With 3 cake flavors to choose from, we'll make sure your taste buds melt into our fluffy bread, delicious frosting, and toothsome toppings.
     </p>
 
     <!-- Above button -->
