--- a/register.html
+++ b/register.html
@@ -32,9 +32,14 @@
        </p> 
       <button type="submit">Register</button> <!-- Takes to verify.html page -->
     </form>
+
+    <!-- Takes user to login.html if they've already made an account -->
+    <p>Already have an account?</p>
+    <a href="login.html"><button type="button">Log In</button></a>
+
   </div>
 
-   <!-- Troubleshoot- Tests is Cognito is loaded (worked, commented now) -->
+  <!-- Troubleshoot- Tests is Cognito is loaded (worked, commented now) -->
   <!-- <script>
     console.log("Does Cognito exist?", typeof AmazonCognitoIdentity);
   </script> -->
